--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@nuxtjs/axios": "^5.13.6",
     "core-js": "^3.25.3",
     "nuxt": "^2.15.8",
+    "nuxt-material-design-icons": "^1.0.4",
     "primeflex": "^3.2.1",
     "primeicons": "^6.0.1",
     "primevue": "^2.10.4",
